Fix ceval icons not showing

--- a/ui/ceval/css/_pv.scss
+++ b/ui/ceval/css/_pv.scss
@@ -54,6 +54,7 @@
     }
 
     .pv-wrap-toggle {
+      font-family: lishogi;
       position: absolute;
       top: 0;
       right: 0;
